--- a/Skills.html
+++ b/Skills.html
@@ -4,10 +4,12 @@
 Skills
 </title>
 <link rel="stylesheet" type="text/CSS" href="CSS/PrimeStyle.css">
-<link rel="stylesheet"type="text/css" href="CSS/Screen sizes.css">
+<link rel="stylesheet" type="text/css" href="CSS/Screensizes.css">
+<link rel="icon" type="image/x-icon" href="Dian van Eyk logo.png">
 <style>
    .skill {
-      margin-bottom: 20px;
+      margin-bottom: 15px;
+      padding: 5px;
     }
 
     .skill-name {
@@ -21,14 +23,20 @@ Skills
       background-color: #fff;
       border-radius: 5px;
       overflow: hidden;
+      border: 3px solid #000000;
     }
-
+    img {
+      margin: 10px;
+      border: 2px solid #ccc;
+    }
     .progress-bar {
       height: 20px;
-      background-color: #0e0443;
+      background-color: #3515d3;
       border-radius: 0px;
       width: 0;
       transition: width 2s;
+      padding: 5px;
+      
     }
 
     .progress-bar span {
@@ -49,15 +57,19 @@ Skills
 </style>
 </head>
 <body>
-  <div class="topnav">
-    <a href="index.html">My Home</a>
-    <a href="Projects.html">My Projects</a>
-    <a href="Skills.html">About Me</a>
 
+  <hr>
+  <h1>About Me</h1>
+  <hr>
+
+  <div class="topnav">
+    <a href="Index.html">My Home</a>
+    <a href="Case Studies.html">My Case Studies</a>
+    <a href="Skills.html">About Me</a>
+    <a href="Contact.html">Contact Me</a>
     </div>
-   <hr>
-   <h1>About Me</h1>
-   <hr>
+    <hr>
+    <section>
    <h2>My Education</h2>
    <h3>Martie du Plessis</h3>
    <ol>
@@ -69,7 +81,7 @@ Skills
     <li>Business Studies:48%</li>
     <li>Computer Assignment Technology: 72%</li>
     <li>Honoury Colours:Academic</li>
-    <li>Top Achiver For Business Studies and Afrikaans Home language in Matric</li>
+    <li>Top Achiever For Business Studies and Afrikaans Home language in Matric</li>
    </ol>
    <h3>CTU:Training solutions</h3>
    <p>Started Studies in 2023 with programming foundation further studies into UI/UX design field with 2-year Calcification being focused on
@@ -78,6 +90,8 @@ Skills
     <li>Microsoft Certified:Azure Data Fundamentals</li>
     <li>IT Specialist:HTML and CSS</li>
     <li>Adobe Professional:Photoshop</li>
+    <li>Adobe Professional:illustrator</li>
+    <li>Adobe Professional:Design</li>
     
    </ol>
    <!--My skill ranges-->
@@ -122,11 +136,5 @@ Skills
     <div class="progress-percentage">82%</div>
   </div>
   </div>
-   <h2>Other Skills</h2>
-   <p> Basic Graphical Design Skills</p>
-    <img src="Photos/Natural beauty.jpg"style="width:350px;height:350px"alt="Mountain and forest scenic vista"></img><img src="Photos/DR van Eyk (1).png"style="width:350px;height:350px"alt="Mountain and forest scenic vista drawn"></img><img src="Photos/Laprissaurus.jpg"style="width:350px;height:350px"alt="Mountain and forest scenic vista"><br>
-    <img src="Photos/Jason Returns.png"style="width:350px;height:350px"alt="Friday the 13th"></img><img src="Photos/Tiger Day Raising.jpg"style="width:350px;height:350px"alt="Tiger informational"></img><img src="Photos/Never walk alone in the woods printing.jpg"style="width:350px;height:350px"alt="Mountain and forest scenic vista">
-
-
-</body>
+</section>
 </html>
