Fix HTML formatting and update CV link

--- a/Contact.html
+++ b/Contact.html
@@ -51,9 +51,10 @@
         <li><a href="https://www.facebook.com/dian.vaneyk.9">Facebook</a></li>
         <li><a href="https://www.instagram.com/dian_van_eyk/?hl=en">Instagram</a></li>
         <li><a href="https://www.linkedin.com/in/dian-van-eyk-b6b6ab28b/">LinkedIn</a></li>
-        <li><a href="Dian Rohen van Eyk CV (3).pdf" download>My CV</a></li>
+        <li><a href="Dian Rohen van Eyk CV.pdf" download>My CV</a></li>
       </ul>
     </div>
   </section>
 </body>
 </html>
+
