--- a/Case Studies.html
+++ b/Case Studies.html
@@ -21,7 +21,7 @@
   <hr>
 
   <div class="topnav">
-    <a href="Index.html">My Home</a>
+    <a href="index.html">My Home</a>
     <a href="Case Studies.html">My Case Studies</a>
     <a href="Skills.html">About Me</a>
     <a href="Contact.html">Contact Me</a>
@@ -55,9 +55,9 @@
   <p>
     <a href="Projects/Design Porfilo.zip" download>Download my full design portfolio here</a>, or preview some of my work below:
   </p>
-  <img src="Graphic design Projects/Post 1.png"style="width:450px;height:450px"  alt="D-day 1 poster">
-  <img src="Graphic design Projects/Post 2.png"style="width:450px;height:450px"  alt="D-day 2 poster">
-  <img src="Graphic design Projects/Post 3.png"style="width:450px;height:450px"  alt="D-day 3 poster">
+  <img src="Project screenshots/Post 1.png"style="width:450px;height:450px"  alt="D-day 1 poster">
+  <img src="Project screenshots/Post 2.png"style="width:450px;height:450px"  alt="D-day 2 poster">
+  <img src="Project screenshots/Post 3.png"style="width:450px;height:450px"  alt="D-day 3 poster">
   <img src="Photos/DR van Eyk (1).png"style="width:450px;height:450px"  alt="Stylized portrait artwork">
   <img src="Photos/Laprissaurus.jpg"style="width:450px;height:450px"  alt="Fantasy dinosaur illustration">
   <img src="Photos/Tiger Day Raising.jpg"style="width:450px;height:450px"  alt="Educational tiger infographic">
@@ -75,10 +75,6 @@
   <p>A project I created for Engo our Childern house to create a Maintenance System to report Maintenance on their premise to handle all the errors needed to fix. </p>
   <h4>Video Projects</h4>
     <p>Here are some of my video projects that I have done in this year</p>
-    <video width="560" height="315" controls>
-        <source src="Projects/Video_Projects/DianvanEyk_MME522_FA1_YT.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-    </video><br><br>
 <iframe
   width="560"
   height="315"
@@ -94,13 +90,12 @@
 <iframe
   width="560"
   height="315"
-  src="https://www.youtube.com/embed/Pk0HZYBjb4I"
+  src="https://youtu.be/embed/Pk0HZYBjb4I?si=uW3wwRi-y6HYHWWV"
   title="YouTube video player"
   frameborder="0"
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
   allowfullscreen>
 </iframe>
-    </iframe>
 </section>
 </body>
 </html>
