--- a/Case Studies.html
+++ b/Case Studies.html
@@ -90,13 +90,28 @@
 <iframe
   width="560"
   height="315"
-  src="https://youtu.be/embed/Pk0HZYBjb4I?si=mGEnL6tM0DNypGOD"
+  src="https://www.youtube.com/embed/BcBuxZk1JEA"
   title="YouTube video player"
   frameborder="0"
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
   allowfullscreen>
 </iframe>
+
+<br><br>
+
+<iframe 
+width="560" 
+height="315" 
+src="https://www.youtube.com/embed/Pk0HZYBjb4I?si=mGEnL6tM0DNypGOD"
+ title="YouTube video player" 
+ frameborder="0" 
+ allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+ referrerpolicy="strict-origin-when-cross-origin" 
+ allowfullscreen>
+  
+ </iframe>
 </section>
 </body>
 </html>
+
 
