--- a/Case Studies.html
+++ b/Case Studies.html
@@ -87,15 +87,12 @@
 
 <br><br>
 
-<iframe
-  width="560"
-  height="315"
-  src="https://www.youtube.com/embed/BcBuxZk1JEA"
-  title="YouTube video player"
-  frameborder="0"
-  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-  allowfullscreen>
-</iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/NGeYK1RCANA?si=9Z-pmf1MLwSDy_v1" 
+  title="YouTube video player" 
+  frameborder="0" 
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+  referrerpolicy="strict-origin-when-cross-origin" 
+  allowfullscreen></iframe>
 
 <br><br>
 
@@ -113,5 +110,6 @@ src="https://www.youtube.com/embed/Pk0HZYBjb4I?si=mGEnL6tM0DNypGOD"
 </section>
 </body>
 </html>
+
 
 
