Fix HTML encoding issues in Skills.html

--- a/Skills.html
+++ b/Skills.html
@@ -77,20 +77,20 @@ Skills
     <li>English First additional language: 70%</li>
     <li>Mathematical Literacy : 71%</li>
     <li>Life Orientation:73%</li>
-    <li>Life sciences:50%</li>
+    <li>Life Sciences:50%</li>
     <li>Business Studies:48%</li>
     <li>Computer Assignment Technology: 72%</li>
     <li>Honoury Colours:Academic</li>
     <li>Top Achiever For Business Studies and Afrikaans Home language in Matric</li>
    </ol>
-   <h3>CTU:Training solutions</h3>
-   <p>Started Studies in 2023 with programming foundation further studies into UI/UX design field with 2-year Calcification being focused on
+   <h3>CTU:Training Solutions</h3>
+   <p>Started Studies in 2023 with Programming Foundation further studies into UI/UX design field with 2-year Calcification being focused on
     <br> website design and 3d modelling completion in 2025.</p>
    <ol>
     <li>Microsoft Certified:Azure Data Fundamentals</li>
     <li>IT Specialist:HTML and CSS</li>
     <li>Adobe Professional:Photoshop</li>
-    <li>Adobe Professional:illustrator</li>
+    <li>Adobe Professional:Illustrator</li>
     <li>Adobe Professional:Design</li>
     
    </ol>
@@ -137,4 +137,5 @@ Skills
   </div>
   </div>
 </section>
+
 </html>
