--- a/Skills.html
+++ b/Skills.html
@@ -108,7 +108,7 @@ Skills
     <li>IT Specialist: HTML and CSS</li>
     <li>Adobe Professional: Photoshop</li>
     <li>Adobe Professional: Illustrator</li>
-    <li>Adobe Professional: InDesign</li>
+    <li>Adobe Professional: Visual Design</li>
    </ol>
 
    <!--My skill ranges-->
@@ -157,3 +157,4 @@ Skills
   </section>
 
 </html>
+
