--- a/Case Studies.html
+++ b/Case Studies.html
@@ -70,7 +70,7 @@
   <img src="Photos/3.jpg" style="width:450px;height:450px" alt="Event poster three">
   <h4>Engo Maintenance system</h4>
   <video width="560"height="315" controls>
-    <source src="Projects/Video_Projects/Engo_Demo.MP4"type="video/mp4">
+    <source src="Projects/Engo_Demo.MP4"type="video/mp4">
   </video>
   <p>A project I created for Engo our Childern house to create a Maintenance System to report Maintenance on their premise to handle all the errors needed to fix. </p>
   <h4>Video Projects</h4>
@@ -110,6 +110,7 @@ src="https://www.youtube.com/embed/Pk0HZYBjb4I?si=mGEnL6tM0DNypGOD"
 </section>
 </body>
 </html>
+
 
 
 
