--- a/Case Studies.html
+++ b/Case Studies.html
@@ -70,11 +70,20 @@
   <img src="Photos/3.jpg" style="width:450px;height:450px" alt="Event poster three">
   <h4>Engo Maintenance system</h4>
   <video width="560"height="315" controls>
-    <source src="Projects/Engo_Demo.MP4"type="video/mp4">
+    <source src="Projects/Video_Projects/Engo_Demo.MP4"type="video/mp4">
   </video>
   <p>A project I created for Engo our Childern house to create a Maintenance System to report Maintenance on their premise to handle all the errors needed to fix. </p>
   <h4>Video Projects</h4>
     <p>Here are some of my video projects that I have done in this year</p>
+  <iframe
+  width="560"
+  height="315"
+  src="https://www.youtube.com/embed/BcBuxZk1JEA"
+  title="YouTube video player"
+  frameborder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+  allowfullscreen>
+</iframe>
 <iframe
   width="560"
   height="315"
@@ -87,15 +96,6 @@
 
 <br><br>
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/NGeYK1RCANA?si=9Z-pmf1MLwSDy_v1" 
-  title="YouTube video player" 
-  frameborder="0" 
-  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-  referrerpolicy="strict-origin-when-cross-origin" 
-  allowfullscreen></iframe>
-
-<br><br>
-
 <iframe 
 width="560" 
 height="315" 
@@ -104,13 +104,7 @@ src="https://www.youtube.com/embed/Pk0HZYBjb4I?si=mGEnL6tM0DNypGOD"
  frameborder="0" 
  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
  referrerpolicy="strict-origin-when-cross-origin" 
- allowfullscreen>
-  
- </iframe>
+ allowfullscreen></iframe>
 </section>
 </body>
 </html>
-
-
-
-
