--- a/Skills.html
+++ b/Skills.html
@@ -1,16 +1,12 @@
-<html> 
+<html>
 <head>
-
 <title>
 Skills
 </title>
-
 <link rel="stylesheet" type="text/CSS" href="CSS/PrimeStyle.css">
 <link rel="stylesheet" type="text/css" href="CSS/Screensizes.css">
 <link rel="icon" type="image/x-icon" href="Dian van Eyk logo.png">
-
 <style>
-
    .skill {
       margin-bottom: 15px;
       padding: 5px;
@@ -29,12 +25,10 @@ Skills
       overflow: hidden;
       border: 3px solid #000000;
     }
-
     img {
       margin: 10px;
       border: 2px solid #ccc;
     }
-
     .progress-bar {
       height: 20px;
       background-color: #3515d3;
@@ -42,6 +36,7 @@ Skills
       width: 0;
       transition: width 2s;
       padding: 5px;
+      
     }
 
     .progress-bar span {
@@ -60,9 +55,7 @@ Skills
     .progress-bar-5 { width: 82%; }
 
 </style>
-
 </head>
-
 <body>
 
   <hr>
@@ -74,46 +67,35 @@ Skills
     <a href="Case Studies.html">My Case Studies</a>
     <a href="Skills.html">About Me</a>
     <a href="Contact.html">Contact Me</a>
-  </div>
-
-  <hr>
-
-  <section>
-
+    </div>
+    <hr>
+    <section>
    <h2>My Education</h2>
-
    <h3>Martie du Plessis</h3>
-
    <ol>
-    <li>Afrikaans Home Language: 66%</li>
-    <li>English First Additional Language: 70%</li>
-    <li>Mathematical Literacy: 71%</li>
-    <li>Life Orientation: 73%</li>
-    <li>Life Sciences: 50%</li>
-    <li>Business Studies: 48%</li>
-    <li>Computer Applications Technology: 72%</li>
-    <li>Honorary Colours: Academic</li>
-    <li>Top Achiever for Business Studies and Afrikaans Home Language in Matric</li>
+    <li>Afrikaans Home language: 66%</li>
+    <li>English First additional language: 70%</li>
+    <li>Mathematical Literacy : 71%</li>
+    <li>Life Orientation:73%</li>
+    <li>Life sciences:50%</li>
+    <li>Business Studies:48%</li>
+    <li>Computer Assignment Technology: 72%</li>
+    <li>Honoury Colours:Academic</li>
+    <li>Top Achiever For Business Studies and Afrikaans Home language in Matric</li>
    </ol>
-
-   <h3>CTU Training Solutions</h3>
-
-   <p>
-     Started studies in 2023 with a Programming Foundation, further studies into the UI/UX design field, with a 2-year qualification focused on
-     <br> website design and 3D modelling, to be completed in 2025.
-   </p>
-
+   <h3>CTU:Training solutions</h3>
+   <p>Started Studies in 2023 with programming foundation further studies into UI/UX design field with 2-year Calcification being focused on
+    <br> website design and 3d modelling completion in 2025.</p>
    <ol>
-    <li>Microsoft Certified: Azure Data Fundamentals</li>
-    <li>IT Specialist: HTML and CSS</li>
-    <li>Adobe Professional: Photoshop</li>
-    <li>Adobe Professional: Illustrator</li>
-    <li>Adobe Professional: Visual Design</li>
+    <li>Microsoft Certified:Azure Data Fundamentals</li>
+    <li>IT Specialist:HTML and CSS</li>
+    <li>Adobe Professional:Photoshop</li>
+    <li>Adobe Professional:illustrator</li>
+    <li>Adobe Professional:Design</li>
+    
    </ol>
-
    <!--My skill ranges-->
    <h2>My Skills</h2>
-
    <div class="skill">
     <div class="skill-name">Graphic Design</div>
     <div class="progress">
@@ -153,8 +135,6 @@ Skills
     </div>
     <div class="progress-percentage">82%</div>
   </div>
-
-  </section>
-
+  </div>
+</section>
 </html>
-
