--- a/Zoopedia.html
+++ b/Zoopedia.html
@@ -57,7 +57,7 @@
   <hr>
 
   <div class="topnav">
-    <a href="Index.html">My Home</a>
+    <a href="index.html">My Home</a>
     <a href="Case Studies.html">My Case Studies</a>
     <a href="Skills.html">About Me</a>
     <a href="Contact.html">Contact Me</a>
