--- a/Contact.html
+++ b/Contact.html
@@ -87,23 +87,24 @@
     </div>
 
   <hr>
-  <section>
-    <h2>Contact Me</h2>
-    <p>Thank you for taking a look at my personal website today.</p>
-    <p>Feel free to share your thoughts and feelings about my portfolio.</p>
-    <p>If you wish to contact me through another means,</p>
+<section>
+  <h2>Contact Me</h2>
+  <p>Thank you for taking the time to look at my personal website and portfolio.</p>
+  <p>I’d love to hear your thoughts, feedback, or questions about my portfolio and skills .</p>
+  <p>If you'd prefer to reach out through other platforms, you can find my social links and Email below.</p>
 
-    <!-- Social Media -->
-    <div class="social_links">
-      <h3>Social Media Links</h3>
-      <ul>
-        <li><a href="https://www.facebook.com/dian.vaneyk.9">Facebook</a></li>
-        <li><a href="https://www.instagram.com/dian_van_eyk/?hl=en">Instagram</a></li>
-        <li><a href="https://www.linkedin.com/in/dian-van-eyk-b6b6ab28b/">LinkedIn</a></li>
-        <li>Email:Dian.vanEyk2003@gmail.com</li>
-        <li><a href="Dian Rohen van Eyk CV.pdf"download>My CV</a></li>
-      </ul>
-    </div>
-  </section>
+  <!-- Social Media -->
+  <div class="social_links">
+    <h3>Social Media Links</h3>
+    <ul>
+      <li>Dian.vanEyk2003@gmail.com for Email Inquiries</li>
+      <li><a href="https://www.facebook.com/dian.vaneyk.9">Facebook</a></li>
+      <li><a href="https://www.instagram.com/dian_van_eyk/?hl=en">Instagram</a></li>
+      <li><a href="https://www.linkedin.com/in/dian-van-eyk-b6b6ab28b/">LinkedIn</a></li>
+      <li><a href="Dian Rohen van Eyk CV.pdf" download>Download My CV</a></li>
+    </ul>
+  </div>
+</section>
 </body>
 </html>
+
