--- a/Contact.html
+++ b/Contact.html
@@ -97,7 +97,7 @@
   <div class="social_links">
     <h3>Social Media Links</h3>
     <ul>
-      <li>Dian.vanEyk2003@gmail.com for Email Inquiries</li>
+      <li> Email Inquiries:Dian.vanEyk2003@gmail.com</li>
       <li><a href="https://www.facebook.com/dian.vaneyk.9">Facebook</a></li>
       <li><a href="https://www.instagram.com/dian_van_eyk/?hl=en">Instagram</a></li>
       <li><a href="https://www.linkedin.com/in/dian-van-eyk-b6b6ab28b/">LinkedIn</a></li>
@@ -107,4 +107,5 @@
 </section>
 </body>
 </html>
+
 
