--- a/Case Studies.html
+++ b/Case Studies.html
@@ -87,7 +87,7 @@
 <iframe
   width="560"
   height="315"
-  src="https://www.youtube.com/embed/BcBuxZk1JEA"
+  src="https://youtu.be/embed/NGeYK1RCANA?si=NQeg3J3PgkzF_vVX"
   title="YouTube video player"
   frameborder="0"
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -108,3 +108,4 @@ src="https://www.youtube.com/embed/Pk0HZYBjb4I?si=mGEnL6tM0DNypGOD"
 </section>
 </body>
 </html>
+
