--- a/Case Studies.html
+++ b/Case Studies.html
@@ -84,15 +84,15 @@
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
   allowfullscreen>
 </iframe>
-<iframe
-  width="560"
-  height="315"
-  src="https://youtu.be/embed/NGeYK1RCANA?si=NQeg3J3PgkzF_vVX"
-  title="YouTube video player"
-  frameborder="0"
-  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-  allowfullscreen>
+  
+<iframe width="560" height="315" 
+    src="https://www.youtube.com/embed/NGeYK1RCANA" 
+    title="YouTube video player" 
+    frameborder="0" 
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+    allowfullscreen>
 </iframe>
+
 
 <br><br>
 
@@ -108,4 +108,5 @@ src="https://www.youtube.com/embed/Pk0HZYBjb4I?si=mGEnL6tM0DNypGOD"
 </section>
 </body>
 </html>
+
 
