--- a/camperbot.html
+++ b/camperbot.html
@@ -88,7 +88,7 @@
         <img src="Project screenshots/Camperbot.png" alt="CamperBot login page">
         <img src="Project screenshots/CamperBot2.png" alt="CamperBot conversation window">
         <img src="Project screenshots/Camperbot3t.png" alt="CamperBot logic interface">
-        <img src="Project screenshots/CamperBot4.png" alt="CamperBot config screen">
+        <img src="Project screenshots/Camperbot4.png" alt="CamperBot config screen">
         <img src="Project screenshots/CamperBot5.png" alt="CamperBot export feature">
       </div>
 
@@ -101,3 +101,4 @@
   </section>
 </body>
 </html>
+
