--- a/Skills.html
+++ b/Skills.html
@@ -1,11 +1,11 @@
 <html>
 <head>
-<title>
-Skills
-</title>
-<link rel="stylesheet" type="text/CSS" href="CSS/PrimeStyle.css">
+<title>Skills</title>
+
+<link rel="stylesheet" type="text/css" href="CSS/PrimeStyle.css">
 <link rel="stylesheet" type="text/css" href="CSS/Screensizes.css">
 <link rel="icon" type="image/x-icon" href="Dian van Eyk logo.png">
+
 <style>
    .skill {
       margin-bottom: 15px;
@@ -25,10 +25,12 @@ Skills
       overflow: hidden;
       border: 3px solid #000000;
     }
+
     img {
       margin: 10px;
       border: 2px solid #ccc;
     }
+
     .progress-bar {
       height: 20px;
       background-color: #3515d3;
@@ -36,105 +38,106 @@ Skills
       width: 0;
       transition: width 2s;
       padding: 5px;
-      
     }
 
-    .progress-bar span {
-      position: absolute;
-      right: 10px;
-      top: 0;
-      line-height: 20px;
-      color: white;
-    }
-
-    /* Set individual progress percentages depending on the skills */
+    /* Skill percentages */
     .progress-bar-1 { width: 85%; }
     .progress-bar-2 { width: 88%; }
     .progress-bar-3 { width: 80%; }
     .progress-bar-4 { width: 78%; }
     .progress-bar-5 { width: 82%; }
-
 </style>
 </head>
+
 <body>
 
-  <hr>
-  <h1>About Me</h1>
-  <hr>
+<hr>
+<h1>About Me</h1>
+<hr>
 
-  <div class="topnav">
-    <a href="index.html">My Home</a>
-    <a href="Case Studies.html">My Case Studies</a>
-    <a href="Skills.html">About Me</a>
-    <a href="Contact.html">Contact Me</a>
-    </div>
-    <hr>
-    <section>
-   <h2>My Education</h2>
-   <h3>Martie du Plessis</h3>
-   <ol>
-    <li>Afrikaans Home language: 66%</li>
-    <li>English First additional language: 70%</li>
-    <li>Mathematical Literacy : 71%</li>
-    <li>Life Orientation:73%</li>
-    <li>Life sciences:50%</li>
-    <li>Business Studies:48%</li>
-    <li>Computer Assignment Technology: 72%</li>
-    <li>Honoury Colours:Academic</li>
-    <li>Top Achiever For Business Studies and Afrikaans Home language in Matric</li>
-   </ol>
-   <h3>CTU:Training solutions</h3>
-   <p>Started Studies in 2023 with programming foundation further studies into UI/UX design field with 2-year Calcification being focused on
-    <br> website design and 3d modelling completion in 2025.</p>
-   <ol>
-    <li>Microsoft Certified:Azure Data Fundamentals</li>
-    <li>IT Specialist:HTML and CSS</li>
-    <li>Adobe Professional:Photoshop</li>
-    <li>Adobe Professional:illustrator</li>
-    <li>Adobe Professional:Design</li>
-    
-   </ol>
-   <!--My skill ranges-->
-   <h2>My Skills</h2>
-   <div class="skill">
-    <div class="skill-name">Graphic Design</div>
-    <div class="progress">
-      <div class="progress-bar progress-bar-1"></div>
-    </div>
-    <div class="progress-percentage">85%</div>
-  </div>
+<div class="topnav">
+  <a href="index.html">My Home</a>
+  <a href="Case Studies.html">My Case Studies</a>
+  <a href="Skills.html">About Me</a>
+  <a href="Contact.html">Contact Me</a>
+</div>
 
-  <div class="skill">
-    <div class="skill-name">Web Design</div>
-    <div class="progress">
-      <div class="progress-bar progress-bar-2"></div>
-    </div>
-    <div class="progress-percentage">88%</div>
-  </div>
+<hr>
 
-  <div class="skill">
-    <div class="skill-name">Research Skills</div>
-    <div class="progress">
-      <div class="progress-bar progress-bar-3"></div>
-    </div>
-    <div class="progress-percentage">80%</div>
-  </div>
+<section>
+<h2>My Education</h2>
 
-  <div class="skill">
-    <div class="skill-name">Computing Skills</div>
-    <div class="progress">
-      <div class="progress-bar progress-bar-4"></div>
-    </div>
-    <div class="progress-percentage">78%</div>
-  </div>
+<h3>Martie du Plessis</h3>
+<ol>
+  <li>Afrikaans Home Language: 66%</li>
+  <li>English First Additional Language: 70%</li>
+  <li>Mathematical Literacy: 71%</li>
+  <li>Life Orientation: 73%</li>
+  <li>Life Sciences: 50%</li>
+  <li>Business Studies: 48%</li>
+  <li>Computer Applications Technology: 72%</li>
+  <li>Honorary Colours: Academic</li>
+  <li>Top Achiever for Business Studies and Afrikaans Home Language in Matric</li>
+</ol>
 
-  <div class="skill">
-    <div class="skill-name">Social Skills</div>
-    <div class="progress">
-      <div class="progress-bar progress-bar-5"></div>
-    </div>
-    <div class="progress-percentage">82%</div>
+<h3>CTU Training Solutions</h3>
+<p>
+  Started studies in 2023 with a foundation in programming, followed by further specialization in the UI/UX design field.  
+  The two-year certification focuses on website design and 3D modelling, with completion expected in 2025.
+</p>
+
+<ol>
+  <li><strong>Microsoft Certified:</strong> Azure Data Fundamentals</li>
+  <li><strong>IT Specialist:</strong> HTML and CSS</li>
+  <li><strong>Adobe Certified Professional:</strong> Photoshop</li>
+  <li><strong>Adobe Certified Professional:</strong> Illustrator</li>
+  <li><strong>Adobe Certified Professional:</strong> Design</li>
+  <li><strong>Meta Certified:</strong>Digital Marketing Associate</li>
+</ol>
+
+<h2>My Skills</h2>
+
+<div class="skill">
+  <div class="skill-name">Graphic Design</div>
+  <div class="progress">
+    <div class="progress-bar progress-bar-1"></div>
   </div>
+  <div class="progress-percentage">85%</div>
+</div>
+
+<div class="skill">
+  <div class="skill-name">Web Design</div>
+  <div class="progress">
+    <div class="progress-bar progress-bar-2"></div>
   </div>
+  <div class="progress-percentage">88%</div>
+</div>
+
+<div class="skill">
+  <div class="skill-name">Research Skills</div>
+  <div class="progress">
+    <div class="progress-bar progress-bar-3"></div>
+  </div>
+  <div class="progress-percentage">80%</div>
+</div>
+
+<div class="skill">
+  <div class="skill-name">Computing Skills</div>
+  <div class="progress">
+    <div class="progress-bar progress-bar-4"></div>
+  </div>
+  <div class="progress-percentage">78%</div>
+</div>
+
+<div class="skill">
+  <div class="skill-name">Social Skills</div>
+  <div class="progress">
+    <div class="progress-bar progress-bar-5"></div>
+  </div>
+  <div class="progress-percentage">82%</div>
+</div>
+
 </section>
+
+</body>
 </html>
