--- a/Case Studies.html
+++ b/Case Studies.html
@@ -72,7 +72,7 @@
   <video width="560"height="315" controls>
     <source src="Projects/Engo_Demo.MP4"type="video/mp4">
   </video>
-  <p>A project I created for Engo our Childern house to create a Maintenance System to report Maintenance problems on their premise to handle all the errors needed to fix. </p>
+  <p>A project I created for Engo our Childern house to create a Maintenance System to report Maintenance problems on their premise to handle all the maintenance problems that needed to be fixed suchs as leaking pipes or broken lights. </p>
   <h4>Video Projects</h4>
     <p>Here are some of my video projects that I have done in this year</p>
   <iframe
@@ -108,6 +108,7 @@ src="https://www.youtube.com/embed/Pk0HZYBjb4I?si=mGEnL6tM0DNypGOD"
 </section>
 </body>
 </html>
+
 
 
 
