--- a/Case Studies.html
+++ b/Case Studies.html
@@ -38,14 +38,17 @@
 
 
   <h3><a href="Georage Bakery.html"> Georage Bakery</a></h3>
-
+  <p>My bakery website that was a summative project in my second year </p>
   <img src="Project screenshots/Bake4.png" alt="Bakery home page">
   <br>
   
 
   <h3><a href=camperbot.html>CamperBot</a></h3>
+    <p>A AI bot i made for a camping store </p>
   <img src="Project screenshots/Camperbot.png"  alt="CamperBot login page">
-
+  <h3><a href=Garden.html>Garden</h3>
+        <p>A E-commernce website for a garden website that i created for my summative assignment in my final year of university </p>
+  <img src="Project screenshots/Garden2.png"  alt="Garden home page">
 
 
 
@@ -105,12 +108,16 @@ src="https://www.youtube.com/embed/Pk0HZYBjb4I?si=mGEnL6tM0DNypGOD"
  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
  referrerpolicy="strict-origin-when-cross-origin" 
  allowfullscreen></iframe>
+
+ <iframe 
+width="560" 
+height="315" 
+src="https://youtube.com/embed/FhGTrcb_j3k?si=hjT_hxW8ze0FgODt"
+ title="YouTube video player" 
+ frameborder="0" 
+ allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+ referrerpolicy="strict-origin-when-cross-origin" 
+ allowfullscreen></iframe>
 </section>
 </body>
 </html>
-
-
-
-
-
-
