--- a/Case Studies.html
+++ b/Case Studies.html
@@ -46,7 +46,8 @@
   <h3><a href=camperbot.html>CamperBot</a></h3>
     <p>A AI bot i made for a camping store </p>
   <img src="Project screenshots/Camperbot.png"  alt="CamperBot login page">
-  <h3><a href=Garden.html>Garden</h3>
+  
+  <h3><a href=Garden.html>Garden</h3></a>
         <p>A E-commernce website for a garden website that i created for my summative assignment in my final year of university </p>
   <img src="Project screenshots/Garden2.png"  alt="Garden home page">
 
@@ -121,3 +122,4 @@ src="https://youtube.com/embed/FhGTrcb_j3k?si=hjT_hxW8ze0FgODt"
 </section>
 </body>
 </html>
+
