--- a/Skills.html
+++ b/Skills.html
@@ -87,12 +87,12 @@
 </p>
 
 <ol>
-  <li><strong>Microsoft Certified:</strong> Azure Data Fundamentals</li>
-  <li><strong>IT Specialist:</strong> HTML and CSS</li>
-  <li><strong>Adobe Certified Professional:</strong> Photoshop</li>
-  <li><strong>Adobe Certified Professional:</strong> Illustrator</li>
-  <li><strong>Adobe Certified Professional:</strong> Design</li>
-  <li><strong>Meta Certified:</strong>Digital Marketing Associate</li>
+  <a href="Achievements - dianvaneyk-6050 _ Microsoft Learn.pdf" download><li><strong>Microsoft Certified:</strong> Azure Data Fundamentals</li></a>
+  <a href="https://www.credly.com/badges/a4915961-151a-4047-a917-b998f213bbc5/public_url"><li><strong>IT Specialist:</strong> HTML and CSS</li></a>
+  <a href="https://www.credly.com/badges/293adf15-0d17-4cef-9c18-2b4171ff5d58/public_url"><li><strong>Adobe Certified Professional:</strong> Photoshop</li></a>
+  <a href="https://www.credly.com/badges/92bd2f6d-6f2c-4fa4-b29f-27b5bbdef40f/public_url"><li><strong>Adobe Certified Professional:</strong> Illustrator</li></a>
+  <a href="https://www.credly.com/badges/751a035c-69eb-4695-a4f5-6cd263bdf13d/public_url"><li><strong>Adobe Certified Professional:</strong> Design</li></a>
+  <a href="https://www.credly.com/badges/2de0ed41-7a62-4dc6-bcb4-f0a3c70dd2ea/public_url"><li><strong>Meta Certified:</strong> Digital Marketing Associate</li></a>
 </ol>
 
 <h2>My Skills</h2>
