--- a/Case Studies.html
+++ b/Case Studies.html
@@ -46,25 +46,27 @@
   <h3><a href=camperbot.html>CamperBot</a></h3>
     <p>A AI bot i made for a camping store </p>
   <img src="Project screenshots/Camperbot.png"  alt="CamperBot login page">
-  
+
   <h3><a href=Garden.html>Garden</h3></a>
         <p>A E-commernce website for a garden website that i created for my summative assignment in my final year of university </p>
   <img src="Project screenshots/Garden2.png"  alt="Garden home page">
 
-
-
+  <h3><a href="Wordpress.html">Wordpress Website</a></h3>
+   <p>I created a retro gaming store website using WordPress and Elementor. <br>This was for a formative assignment at CTU to teach us how to create a wordpress webpage </p>
+<img src="Project screenshots/Wordpress2.png" alt="Wordpress website screenshot">
   <h2>Non-Programming Projects</h2>
  
   <h4> Graphic Design Porjects</h4>
   <p>
     <a href="Projects/Design Porfilo.zip" download>Download my full design portfolio here</a>, or preview some of my work below:
   </p>
-  <img src="Project screenshots/Post 1.png"style="width:450px;height:450px"  alt="D-day 1 poster">
-  <img src="Project screenshots/Post 2.png"style="width:450px;height:450px"  alt="D-day 2 poster">
-  <img src="Project screenshots/Post 3.png"style="width:450px;height:450px"  alt="D-day 3 poster">
-  <img src="Photos/DR van Eyk (1).png"style="width:450px;height:450px"  alt="Stylized portrait artwork">
-  <img src="Photos/Laprissaurus.jpg"style="width:450px;height:450px"  alt="Fantasy dinosaur illustration">
-  <img src="Photos/Tiger Day Raising.jpg"style="width:450px;height:450px"  alt="Educational tiger infographic">
+  <img src="Project screenshots/Post 1.png"style="width:550px;height:465px"  alt="D-day 1 poster">
+  <img src="Project screenshots/Post 2.png"style="width:550px;height:465px"  alt="D-day 2 poster">
+  <img src="Project screenshots/Post 3.png"style="width:550px;height:465px"  alt="D-day 3 poster">
+  <img src="Photos/DR van Eyk (1).png"style="width:550px;height:465px"  alt="Stylized portrait artwork">
+  <img src="Photos/Laprissaurus.jpg"style="width:550px;height:465px"  alt="Fantasy dinosaur illustration">
+  <img src="Photos/Tiger Day Raising.jpg"style="width:550px;height:465px"  alt="Educational tiger infographic">
+
 
   <h2>Client Projects</h2>
   <p>I designed event posters for the Bloemfontein Model Car Club:</p>
@@ -122,4 +124,3 @@ src="https://youtube.com/embed/FhGTrcb_j3k?si=hjT_hxW8ze0FgODt"
 </section>
 </body>
 </html>
-
